# FocalytApp

./: .env  .gitignore  App.js  DEVELOPMENT_TESTING_GUIDE.md  ENHANCED_ATTENDANCE_README.md  MODERN_APPROACH_SUMMARY.md  TIMELINE_FEATURE.md  app.json  package copy.json  package-lock copy.json  package-lock.json  package.json
android/: build.gradle  gradle.properties  settings.gradle
android/app/: CMakeLists.txt  build.gradle  debug.keystore
android/app/src copy/main/: AndroidManifest.xml
android/app/src copy/main/java/com/focalytapp/: MainActivity.kt  MainApplication.kt
android/app/src copy/main/res/values/: styles.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/focalapp/: MainActivity.kt  MainApplication.kt
android/app/src/main/java/com/focalyt/: MainActivity.kt  MainApplication.kt
android/app/src/main/java/com/focalytapp/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml  styles.xml
ios/: Podfile
ios/FocalApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/FocalApp.xcodeproj/: project.pbxproj
ios/FocalytApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/FocalytApp.xcodeproj/: project.pbxproj
src - Copy/components/: LogoutButton.js
src - Copy/config/: env.js
src - Copy/constants/: ImagePath.jsx
src - Copy/navigation/: BottomTabNavigator.js
src - Copy/screens/: DashboardEnhanced.js  Home.jsx  NativeMaps.jsx  NewDashboard copy.jsx  NewDashboard.jsx  SettingsScreen.js
src - Copy/utils/: authUtils.js  modernLocationTracker.js
(+34 files in other folders)
